[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/thrishaStuff/Scripts/ContinueToChapter1.gd" type="Script" id=1]
[ext_resource path="res://Scenes/thrishaStuff/Audio/MouseClick.wav" type="AudioStream" id=2]
[ext_resource path="res://Scenes/thrishaStuff/Audio/Menu/George Street Shuffle.wav" type="AudioStream" id=3]
[ext_resource path="res://Scenes/thrishaStuff/Scripts/MenuAudio.gd" type="Script" id=4]
[ext_resource path="res://Scenes/thrishaStuff/images/mainMenu/menuBackground.png" type="Texture" id=5]
[ext_resource path="res://Scenes/thrishaStuff/images/CONTINUE/1.png" type="Texture" id=6]
[ext_resource path="res://Scenes/thrishaStuff/images/CONTINUE/2.png" type="Texture" id=7]

[node name="ContinueToChapter1" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="menuBackground" type="Sprite" parent="."]
position = Vector2( 956, 398 )
scale = Vector2( 1.26296, 1.26296 )
texture = ExtResource( 5 )

[node name="ButtonClick" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
position = Vector2( 980, 566 )
stream = ExtResource( 2 )

[node name="continueAudio" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 3 )
volume_db = -3.0
autoplay = true
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -414.0
margin_top = -53.0
margin_right = 414.0
margin_bottom = 53.0
__meta__ = {
"_edit_group_": true
}

[node name="Continue" type="Button" parent="HBoxContainer"]
margin_right = 412.0
margin_bottom = 106.0
rect_pivot_offset = Vector2( 219, 53 )
icon = ExtResource( 6 )
flat = true

[node name="Main Menu" type="Button" parent="HBoxContainer"]
margin_left = 416.0
margin_right = 828.0
margin_bottom = 106.0
rect_pivot_offset = Vector2( 42, 21 )
icon = ExtResource( 7 )
flat = true

[connection signal="button_down" from="HBoxContainer/Continue" to="." method="_on_Continue_button_down"]
[connection signal="mouse_entered" from="HBoxContainer/Continue" to="." method="_on_Continue_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/Continue" to="." method="_on_Continue_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="button_down" from="HBoxContainer/Main Menu" to="." method="_on_Main_Menu_button_down"]
[connection signal="pressed" from="HBoxContainer/Main Menu" to="." method="_on_Main_Menu_pressed"]
